syntax = "proto3";
option go_package = ".;proto";

package proto;

service Greeter {
  rpc SayHello (HelloRequest) returns (HelloReply) {}
}

message HelloRequest {
  string name = 1;
}

message HelloReply {
 string message = 1;
}


/* 
protoc --go_out=. *.proto
protoc --plugin=protoc-gen-go="D:\Program Files\GoExt\bin\protoc-gen-go-grpc.exe"  --go_out .  .\*.proto
*/
